--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "highcharts": "^9.3.0",
+    "highcharts-vue": "^1.4.0",
+    "jalali-date": "^1.1.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
